[package]
name = "ulx-node-consensus"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
codec = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
futures-timer = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
lazy_static = { workspace = true }
prometheus-endpoint = { workspace = true }
sp-consensus = { workspace = true }
sc-consensus = { workspace = true }
sp-api = { workspace = true, features = ["default"] }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, features = ["default"] }
sc-client-api = { workspace = true }
sp-runtime = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
sp-inherents = { workspace = true, features = ["default"] }
sp-arithmetic = { workspace = true, features = ["default"] }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-keystore = { workspace = true, features = ["default"] }
sp-application-crypto = { workspace = true, features = ["default"] }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sp-timestamp = { workspace = true, features = ["default"] }
tokio = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
serde = { workspace = true, features = ["default"] }
sc-utils = { workspace = true }
sc-executor = { workspace = true, features = ["default"] }
sp-io = { workspace = true, features = ["default"] }
schnellru = { workspace = true }

# Local Dependencies
ulx-primitives = { workspace = true, features = ["default"] }
ulx-notary-apis = { workspace = true }
ulx-node-runtime = { workspace = true, features = ["default"] }
ulx-bitcoin-utxo-tracker = { workspace = true }


[dev-dependencies]
env_logger = { workspace = true }
sc-block-builder = { workspace = true }
frame-support = { workspace = true, features = ["default"] }
sp-tracing = { workspace = true }
sc-client-db = { workspace = true }
sc-keystore = { workspace = true }
sc-network-test = { workspace = true }
sc-utils = { workspace = true }
sp-test-primitives = { workspace = true }
substrate-test-runtime = { workspace = true }
substrate-test-runtime-client = { workspace = true }
sp-keyring = { workspace = true }
sc-network = { workspace = true }
pallet-mining-slot = { workspace = true, features = ["default"] }
ulx-notary = { workspace = true }
