[package]
name = "argon-node-consensus"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
codec = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
futures-timer = { workspace = true }
log = { workspace = true }
tracing = { workspace = true, features = ["default"] }
parking_lot = { workspace = true }
thiserror = { workspace = true, features = ["default"] }
rand = { workspace = true }
lazy_static = { workspace = true }
polkadot-sdk.workspace = true
polkadot-sdk.features = [
    "substrate-prometheus-endpoint",
    "sp-consensus",
    "sc-consensus",
    "sp-api",
    "sp-blockchain",
    "sp-block-builder",
    "sc-client-api",
    "sp-runtime",
    "sp-inherents",
    'sp-arithmetic',
    "sc-transaction-pool",
    "sc-transaction-pool-api",
    "sc-utils",
    "sc-executor",
    "sp-io",
    "sp-keystore",
    "sc-service",
    "sc-telemetry",
    "sp-timestamp",
]
tokio = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
serde = { workspace = true, features = ["default"] }
schnellru = { workspace = true }
sp-application-crypto = { workspace = true }
humantime = { workspace = true }

# Local Dependencies
argon-primitives = { workspace = true, features = ["default"] }
argon-notary-apis = { workspace = true }
argon-runtime = { workspace = true, features = ["default"] }
argon-bitcoin-utxo-tracker = { workspace = true }
argon-randomx = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
pallet-mining-slot = { workspace = true, features = ["default"] }
polkadot-sdk.workspace = true
polkadot-sdk.default-features = true
polkadot-sdk.features = [
    "binary-merkle-tree",
    "sc-consensus-grandpa",
    "sc-block-builder",
    "frame-support",
    "sp-tracing",
    "sc-client-db",
    "sc-keystore",
    "sc-network",
    "sc-network-types",
    "sc-utils",
    "sp-keyring",
]
finality-grandpa = { workspace = true }
argon-notary = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }

[features]
default = []
ci = []
