[package]
name = "ulx-notary-audit"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
codec = { workspace = true }
serde = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
snafu = { workspace = true }
binary-merkle-tree = { workspace = true }

ulx-primitives = { workspace = true }

[dev-dependencies]
frame-support = { workspace = true }
sp-keyring = { workspace = true }
chrono = { workspace = true }

[features]
default = [ "std" ]
std = [
	"anyhow/std",
	"binary-merkle-tree/std",
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde/std",
	"snafu/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"ulx-primitives/std",
]
fast-runtime = [ "ulx-primitives/fast-runtime" ]
