[package]
name = "argon-notary-audit"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
codec = { workspace = true }
serde = { workspace = true }
scale-info = { workspace = true }
thiserror = { workspace = true, default-features = false }
polkadot-sdk = { workspace = true, features = ["binary-merkle-tree", "sp-core", "sp-runtime"] }

argon-primitives = { workspace = true }

[dev-dependencies]
polkadot-sdk = { workspace = true, features = ["frame-support", "sp-keyring"], default-features = true }
chrono = { workspace = true }

[features]
default = [ "std" ]
std = [
	"anyhow/std",
	"argon-primitives/std",
	"codec/std",
	"log/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde/std",
	"thiserror/std",
]
