[package]
name = "ulx-voter"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = "1"
futures = "0.3"
getrandom = "0.2"
parking_lot = "0.12"
num_cpus = "1.16.0"
async-trait = { version = "0.1" }
codec = { package = "parity-scale-codec", version = "3.6", features = ["derive", "max-encoded-len"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value", "arbitrary_precision"] }
subxt = {  version ="0.32.1" }
scale-info = { version = "2.9" }
thiserror = { version ="1.0" }
tokio = { version =  "1.32", features = ["full"] }
tokio-stream = { version =  "0.1", features = ["sync"] }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
sp-keystore = { version = "0.27", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
jsonrpsee = { version = "0.20", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0", features = ["std", "serde"] }
sc-cli =  { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
clap = { version = "4.4", features = ["derive", "cargo","env"] }
futures-timer = "3.0.1"
log = "0.4.20"
rand = {version = "0.8.5"}

ulixee-client = { path= "../../client" }
ulx-notary-primitives = { path = "../primitives"  }
ulx-notary = { path= ".."  }
url = "2.4.0"

[dev-dependencies]
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
sp-keyring = { version = "24.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.1.0" }
ulx-testing = {  path= "../../testing" }