[package]
name = "pallet-block-seal"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-inherents = { workspace = true }
binary-merkle-tree = { workspace = true }
ulx-primitives = { workspace = true }


[dev-dependencies]
sp-io = { workspace = true }
env_logger = { workspace = true }
sp-keyring = { workspace = true }
futures = { workspace = true }

[features]
default = [ "std" ]
std = [
	"binary-merkle-tree/std",
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-keyring/std",
	"sp-runtime/std",
	"sp-std/std",
	"ulx-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
