[package]
name = "pallet-block-seal"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
argon-notary-audit = { workspace = true }
#sp-debug-derive = { workspace = true, features = ["force-debug"] }
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-runtime", "sp-arithmetic", "sp-core", "binary-merkle-tree"] }
pallet-prelude = { workspace = true, default-features = false }

[dev-dependencies]
pallet-prelude = { workspace = true, features = ["test"], default-features = true }
futures = { workspace = true }

[features]
default = [ "std" ]
std = [
	"argon-notary-audit/std",
	"codec/std",
	"pallet-prelude/std",
	"polkadot-sdk/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"polkadot-sdk/frame-benchmarking",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [ "polkadot-sdk/try-runtime" ]
