[package]
name = "pallet-chain-transfer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
publish = false


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-api = { workspace = true }

argon-primitives = { workspace = true }
argon-notary-audit = { workspace = true }

ismp = { workspace = true }
pallet-hyperbridge = { workspace = true }
pallet-ismp = { workspace = true }
token-gateway-primitives = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-sol-macro = { workspace = true }
anyhow = { workspace = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
env_logger = { workspace = true }
sp-keyring = { workspace = true }
sp-io = { workspace = true }
sp-mmr-primitives = { workspace = true }
mmr-primitives = { workspace = true }
binary-merkle-tree = { workspace = true }

[features]
default = [ "std" ]
std = [
	"alloy-primitives/std",
	"alloy-sol-types/std",
	"anyhow/std",
	"argon-notary-audit/std",
	"argon-primitives/std",
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"ismp/std",
	"log/std",
	"pallet-balances/std",
	"pallet-hyperbridge/std",
	"pallet-ismp/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"token-gateway-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-ismp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-hyperbridge/try-runtime",
	"pallet-ismp/try-runtime",
	"sp-runtime/try-runtime",
	"token-gateway-primitives/try-runtime",
]
